# smart-statements

./: .gitignore  README.md  pyproject.toml
scripts/: create_db.py  ingest_xlsx.py
src/smart_statements/: __init__.py  tools.py
src/smart_statements/ingest/: __init__.py  pipeline.py
