[project]
name = "smart-statements"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cameron", email = "cameronwood858@googlemail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyprojroot>=0.3.0",
]

[project.scripts]
smart-statements = "smart_statements:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "invoke>=3.0.3",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
]
